[package]
name = "ope"
version = "0.1.0"
authors = ["Kevin Lewi <klewi@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hkdf = "0.10.0"
sha2 = "0.9.2"
rand_core = "0.5.1"
hex = "0.4.2"

[dev-dependencies]
rand = "0.7"
criterion = "0.3.3"

[[bench]]
path = "bench/ope.rs"
name = "ope"
harness = false
